# spider

./: .gitignore  CMakeLists.txt  Communication.h  MoveCommands.cpp  MoveCommands.h  README.md  Server.cpp  Server.h  command.proto  conanfile.txt  generate_proj  main.cpp  platform.cpp  platform.h  platform.h.gch  servomanager.cpp  servomanager.h  telemetrymanager.cpp  telemetrymanager.h  voicemanager.cpp  voicemanager.h
body/: Head.cpp  Head.h  Hull.cpp  Hull.h  Leg.cpp  Leg.h
drivers/: i2csupervisor.cpp  i2csupervisor.h
hardware/lx16lib/: lx16driver.cpp  lx16driver.h
opt/: README  rpi  sync  video
procedures/: baseprocedure.cpp  baseprocedure.h  basetask.cpp  basetask.h  keepdistance.cpp  keepdistance.h  lookatmarker.cpp  lookatmarker.h  proceduresmanager.cpp  proceduresmanager.h  tasksmanager.cpp  tasksmanager.h
proto/: command.pb.cc  command.pb.h
sensors/: hmc5883l.cpp  hmc5883l.h  mpu6050simple.cpp  mpu6050simple.h
vision/: ArucoPipeline.cpp  ArucoPipeline.h  ImprovePicturePipeline.cpp  ImprovePicturePipeline.h  visionmanager.cpp  visionmanager.h  visionpipeline.h
